[package]
name = "context-matching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
csv = "1.1.6"
rand = "0.8.5"
rand_distr = "0.4.3"
ordered-float = "3.4.0"